[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/pause_layer/pause_layer.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/open-sans/open-sans-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/pause_button.png" type="Texture" id=4]
[ext_resource path="res://assets/prosperosus_standard_theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 3 )

[node name="PauseLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="PressESCToOpenMenu" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -244.5
margin_top = 24.0
margin_right = 244.5
margin_bottom = 31.0
custom_colors/font_color = Color( 0.788235, 0.788235, 0.788235, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pause: ESC (keyboard) or START button (joypad)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="."]
visible = false
margin_left = 16.0
margin_top = 16.0
margin_right = 62.0
margin_bottom = 62.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.243137, 0.211765, 0.290196, 0.717647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxOptions" type="VBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = -64.5
margin_right = 49.5
margin_bottom = 64.5
theme = ExtResource( 5 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pause/VBoxOptions"]
margin_right = 99.0
margin_bottom = 7.0
text = "Pause"
align = 1

[node name="Resume" type="Button" parent="Pause/VBoxOptions"]
margin_top = 17.0
margin_right = 99.0
margin_bottom = 30.0
text = "Resume"

[node name="Button" type="Button" parent="Pause/VBoxOptions"]
margin_top = 40.0
margin_right = 99.0
margin_bottom = 53.0
text = "Settings"

[node name="Button2" type="Button" parent="Pause/VBoxOptions"]
margin_top = 63.0
margin_right = 99.0
margin_bottom = 76.0
text = "Reset"

[node name="MainMenu" type="Button" parent="Pause/VBoxOptions"]
margin_top = 86.0
margin_right = 99.0
margin_bottom = 99.0
text = "Back to Menu"

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Pause/VBoxOptions/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/VBoxOptions/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Pause/VBoxOptions/MainMenu" to="." method="_on_MainMenu_pressed"]
